# KitchenOccupation

./: .gitignore  README.md  index.html  params.json
conf/: dense_conf.yml  guiConfig - kopia.yml  guiConfig.yml  mainConfig - kopia.yml  mainConfig.yml  masks.yml
data/: GTseq14.yml  README.txt
data/CamCalibrator/: CMakeLists.txt  Calibration.cpp.autosave  Calibration.h  main.cpp
data/CamRec/: CMakeLists.txt  CamRecWindow.cpp  CamRecWindow.h  CamRecWindow.ui  camRec.cpp
data/GtCreator/: CMakeLists.txt  GtCreator.cpp
data/KinectRec/KinectRecorder/: KinectRecorder.sln  KinectRecorder.vcxproj  main.cpp
data/Labeling Program/: GtCreator.cpp
data/depthSeq/: depthSeqGT.yml
data/seq1/: seq1GT.xml
data/seq14/: guiConfig.yml  mainConfig.yml  masks.yml
data/seq2/: seq2GT.xml
data/seq3/: seq3EntryExitGT.yml  seq3GT.xml
data/seq4/: seq4EntryExitGT.yml  seq4GT.xml
data/seq5/: seq5EntryExitGT.yml  seq5GT.xml
data/seq6/: seq6EntryExitGT.yml  seq6GT.xml
data/seq7/: seq7EntryExitGT.yml  seq7GT.xml
data/seq9/: seq9-4.yml
doc/: sprint_item_development.eps  sprint_item_development.graphml
doc/Delivery 1.0/html Code Reference Manual/: _algorithm_8hpp_source.html  _algorithm_factory_8hpp_source.html  _analytics_8hpp_source.html  _background_model_mo_g_8hpp_source.html  _calibration_window_8hpp_source.html  _camera_object_8hpp_source.html  _circle_detection_8hpp_source.html  _configuration_manager_8hpp_source.html  _cv_image_widget_8hpp_source.html  _debug_8hpp_source.html  _debug_view_grid_8hpp_source.html  _debug_view_widget_8hpp_source.html  _dense_kitchen_8hpp_source.html  _entry_exit_counter_8hpp_source.html  _entry_exit_evaluator_8hpp_source.html  _evaluation_8hpp_source.html  _flow_estimator_8hpp_source.html  (+228 more)
doc/Poster/: beamerthemeI6pd2.sty  conference_poster_2.snm  conference_poster_2.tex
doc/Project plan/: project_plan.tex
doc/Requirement Specification/: requirement_specification.tex
doc/Sprint collection/: review_collection.tex
doc/Sprint review/: review_single.tex
doc/System view/: System view.tex
doc/Technical Report/: Technical Report.lot  Technical Report.tex
doc/User Manual/: User Manual.tex
doc/User manual/: User Manual.tex
license/: license.txt
src/: CMakeLists.txt  DebugKitchen.cpp  DebugKitchen.h  DenseKitchen.cpp  DenseKitchen.h  DenseKitchen.hpp  camRecorder.cpp  debugGui.cpp  main.cpp
src/Analytics/: Analytics.cpp  Analytics.h  Analytics.hpp  CMakeLists.txt  EntryExitEvaluation.cpp  EntryExitEvaluation.hpp  Evaluation.cpp  Evaluation.h  Evaluation.hpp  FlowEstimator.cpp  FlowEstimator.hpp  Que.cpp  Que.hpp  QueDetector.cpp  QueDetector.hpp  QueSeverityEstimator.cpp  QueSeverityEstimator.hpp  TrackerEvaluator.cpp  TrackerEvaluator.hpp
src/Configuration/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationManager.hpp
src/ConfigurationModule/: CMakeLists.txt
src/DebugModule/: CMakeLists.txt
src/Debugging/: CMakeLists.txt  CalibrationWindow.cpp  CalibrationWindow.hpp  CalibrationWindow.ui  CvImageWidget.cpp  CvImageWidget.hpp  Debug.cpp  Debug.h  Debug.hpp  DebugView.cpp  DebugView.hpp  DebugView.ui  DebugViewGrid.cpp  DebugViewGrid.hpp  DebugViewGrid.hpp.autosave  DebugViewGrid.ui  DebugViewWidget.cpp  DebugViewWidget.cpp.autosave  DebugViewWidget.hpp  DebugViewWidget.ui  Logger.cpp  Logger.hpp  MainConfigurationWindow.cpp  MainConfigurationWindow.hpp  MainConfigurationWindow.ui  MainDebugWindow.cpp  MainDebugWindow.hpp  MainDebugWindow.ui  StereoCalibration.cpp  StereoCalibration.hpp  StereoCalibration.ui  StereoCalibrationWidget.cpp  StereoCalibrationWidget.hpp  StereoCalibrationWidget.ui  debugGui.cpp
src/Evaluation/: CMakeLists.txt  EntryExitEvaluator.cpp  EntryExitEvaluator.hpp  Evaluation.cpp  Evaluation.hpp  TrackerEvaluator.cpp  TrackerEvaluator.hpp
src/ExtLib/: CMakeLists.txt
src/Forms/: CMakeLists.txt  CamRecorderWindow.ui
src/ImageProcessing/: AbstractAlgorithm.hpp  BackgroundModel.cpp  BackgroundModel.hpp  BackgroundModelMoG.cpp  BackgroundModelMoG.hpp  BackgroundModelMoG.hpp.autosave  CMakeLists.txt  CircleDetection.cpp  CircleDetection.hpp  EntryExitCounter.cpp  EntryExitCounter.hpp  ForegroundRegionExtractor.cpp  ForegroundRegionExtractor.hpp  ForegroundRegionExtractorDefault.cpp  ForegroundRegionExtractorDefault.hpp  ForegroundRegionExtractorTwo.cpp  ForegroundRegionExtractorTwo.hpp  ImageProcessor.cpp  ImageProcessor.h  ImageProcessor.hpp  KinectSegmentation.cpp  KinectSegmentation.hpp  KitchenOccupation - genväg.lnk  OpticalFlowSegmentation.cpp  OpticalFlowSegmentation.cpp.autosave  OpticalFlowSegmentation.hpp  PersonDetection.cpp  PersonDetection.hpp  QueDetector.cpp  QueDetector.hpp  StereoBlockMatching.cpp  StereoBlockMatching.cpp.autosave  StereoBlockMatching.hpp  Tracking.cpp  Tracking.hpp  TrackingBruteForce.cpp  TrackingBruteForce.hpp  TrackingBruteForceLines.cpp  TrackingBruteForceLines.hpp  kinectSegmentation.cpp  (+1 more)
src/ImageProcessingModule/: ImageProcessingModule.cpp  ImageProcessingModule.h
src/Network/: CMakeLists.txt  KinectHandlerFreenect.cpp  KinectHandlerFreenect.hpp  KinectHandlerOpenNi.cpp  KinectHandlerOpenNi.hpp  Network.cpp  Network.h  Network.hpp  NetworkModule.h
src/Network/curltestcmake/: CMakeLists.txt  main.cpp
src/NetworkModule/: CMakeLists.txt
src/Statistics/: Analytics.cpp  CMakeLists.txt
src/StatisticsModule/: CMakeLists.txt
src/Utilities/: AbstractAlgorithm.cpp  Abstractalgorithm.hpp  Algorithm.cpp  Algorithm.hpp  Algorithm.hpp.autosave  AlgorithmFactory.cpp  AlgorithmFactory.hpp  CMakeLists.txt  CamRecorderWindow.cpp  CamRecorderWindow.h  CameraObject.cpp  CameraObject.hpp  Frame.cpp  Frame.h  Frame.hpp  FrameList.cpp  FrameList.h  FrameList.hpp  Object.cpp  Object.hpp  Que.cpp  Que.hpp  StringUtilities.cpp  StringUtilities.hpp  Timer.cpp  Timer.hpp  VectorUtilities.cpp  VectorUtilities.hpp  include.h  masking.cpp  masking.hpp  rapidxml.hpp  utilities.hpp
test/: CMakeLists.txt  configTest.cpp  denseKitchenTest.cpp  denseKitchenTest.cpp.autosave  kitchen_unittest.hpp  main.cpp  other_system_test.cpp  system_test.cpp
(+153 files in other folders)
