project(curltestcmake)

cmake_minimum_required(VERSION 2.8)

aux_source_directory(. SRC_LIST)
INCLUDE_DIRECTORIES($ENV{CURL_INCLUDE_DIR})
# Include
INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Gui_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OPENNI2_INCLUDE_DIR})

FIND_LIBRARY( CURL_LIBS
            NAMES libcurl_imp
            HINTS $ENV{CURL_LIBS}
            PATH_SUFFIXES lib)
        MESSAGE( STATUS "CURL_LIBS: " ${CURL_LIBS} )

add_executable(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}  ${CURL_LIBS})
